REFACTOR - Major fixes about userContext simplified