@@ -5,6 +5,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -12,7 +13,7 @@ import java.util.List;
 public class CreateSelfChatService {
 
     public static SelfChat getSelfChat(String name, String userId) {
-        SelfChat selfChat = new SelfChat(name,new ArrayList<>(List.of(userId)));
+        SelfChat selfChat = new SelfChat(name,new ArrayList<>(Arrays.asList(userId)));
         return selfChat;
     }
 }
